# API

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md  api.thrift
include/csconnector/: csconnector.h
src/: APIHandler.cpp  APIHandler.h  APIHandlerBase.cpp  APIHandlerBase.h  APIHandlerInterface.h  CallStats.cpp  CallStats.h  DBHandlers.cpp  DBHandlers.h  DebugLog.h  Validation.h  ValidationTests.cpp  csconnector.cpp
